@@ -169,6 +169,9 @@
       <name>Julien Buret</name>
     </contributor>
     <contributor>
+      <name>Josh Cain</name>
+    </contributor>
+    <contributor>
       <name>Jonathan Carlson</name>
     </contributor>
     <contributor>
